# ejff

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format  gitignore
cmake/: compiler_flags.cmake  external.cmake  sources.cmake
include/ejff/: application.hpp  color.hpp  surface.hpp  unique_handle.hpp  window.hpp
include/ejff/enums/: flip.hpp  pixel_format.hpp
include/ejff/gpu/: device.hpp
include/ejff/gpu/enums/: blend.hpp  blend_factor.hpp  blend_op.hpp  buffer.hpp  buffer_usage_flags.hpp  color_component_flags.hpp  compare_op.hpp  cull_mode.hpp  depth_stencil.hpp  fill_mode.hpp  filter.hpp  front_face.hpp  load_op.hpp  primitive.hpp  rasterizer.hpp  sample.hpp  sample_count.hpp  sampler_address_mode.hpp  sampler_mipmap_mode.hpp  stencil_op.hpp  store_op.hpp  texture.hpp  texture_format.hpp  texture_type.hpp  texture_usage_flags.hpp  transfer_buffer_usage.hpp  vertex.hpp  vertex_element_format.hpp  vertex_input_rate.hpp
include/ejff/gpu/resources/: buffer.hpp  color_target_blend_state.hpp  color_target_description.hpp  color_target_info.hpp  command_buffer.hpp  copy_pass.hpp  depth_stencil_state.hpp  graphics_pipeline.hpp  graphics_pipeline_target_info.hpp  multisample_state.hpp  rasterizer_state.hpp  render_pass.hpp  sampler.hpp  shader.hpp  texture.hpp  transfer_buffer.hpp  (+3 more)
include/ejff/utilities/: enable_bit_mask_operators.hpp
shaders/: build.py
shaders/src/: triangle.frag.hlsl  triangle.vert.hlsl
src/ejff/: application.cpp  main.cpp  surface.cpp  unique_handle.cpp  window.cpp
src/ejff/gpu/: device.cpp
(+16 files in other folders)
